tests/NormalTests/paczka1/small_fuzzy/51639913.err
Error in line 3: 0ZrvipN1zX S647 13,3
Error in line 4: 0ZrvipN1zX S915 14,6
